// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> should match snapshot 1`] = `
<div
  className="App"
>
  <h1
    className="Header"
  >
    React Wars
  </h1>
  <div
    className="ui active inverted dimmer"
  >
    <div
      className="ui text loader ui large text loader"
    >
      Fetching Your Characters
    </div>
  </div>
</div>
`;

exports[`<CharList /> should match snapshot 1`] = `
<div
  className="ui active inverted dimmer"
>
  <div
    className="ui text loader ui large text loader"
  >
    Fetching Your Characters
  </div>
</div>
`;
